# weather

./: .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
common/: views.py
forecast/: forms.py  urls.py  views.py
forecast/repositories/: forecast.py
forecast/services/: forecast.py
forecast/static/forecast/css/: base.css  main.css
forecast/templates/forecast/: base.html  main.html
forecast/tests/: test_forms.py  test_urls.py  test_views.py
weather/: settings.py  urls.py
